tests/golden/fixtures/syntax-element-index-err-no-repeat-aggregate/expected.err
Error: invalid index on symbolic subscript array 'COMP'
   ╭─[ tests/golden/fixtures/syntax-element-index-err-no-repeat-aggregate/input.k65:7:13 ]
   │
 7 │     lda COMP[1]
   │             ─┬─  
   │              ╰─── aggregate index without repeat count
   │ 
   │ Help: `COMP[index]` selects a repeated element only when `COMP` is declared with `* count`; add `* N` to the declaration for element access, or use '.field' or '[.field]' for named field access
   │ 
   │ Note: The `[ ... ]` after a symbolic-subscript var has two meanings: `.field` selects a named field, while numeric indices select repeat elements from `var NAME[...] * N`.
───╯
